--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -127,6 +127,7 @@ html {
  * $LINKS
  */
 a {
+  //       link-colors($normal, $hover, $active, $visited, $focus)
   @include link-colors($blue, $dark-blue, $salmon, $blue, $dark-blue);
   text-decoration: none;
 }
