--- a/css/layouts/baseline/baseline.layout.css
+++ b/css/layouts/baseline/baseline.layout.css
@@ -10,7 +10,7 @@
   max-width: 90%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 1.618em;
+  margin-bottom: 1em;
   overflow: hidden;
   *zoom: 1; }
   /* line 12, ../../../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/susy-2.2.2/sass/susy/output/support/_clearfix.scss */
@@ -21,8 +21,8 @@
     clear: both; }
 
 /* line 31, ../../../sass/layouts/baseline/baseline.layout.scss */
-.l-main, .l-footer-wrapper {
-  padding: 1.618em 0; }
+.l-main {
+  padding: 2em 0; }
 
 /* line 34, ../../../sass/layouts/baseline/baseline.layout.scss */
 .l-region--header-preface-left {
@@ -41,7 +41,7 @@
 .l-region--help,
 .l-region--sidebar-first,
 .l-region--sidebar-second {
-  margin-bottom: 1.618em; }
+  margin-bottom: 1em; }
 
 @media (min-width: 600px) {
   /* line 53, ../../../sass/layouts/baseline/baseline.layout.scss */
@@ -55,47 +55,34 @@
     width: 48.93617%;
     float: right;
     margin-right: 0; }
-    /* line 58, ../../../sass/layouts/baseline/baseline.layout.scss */
-    .l-region-header-preface-right-wrapper .l-region--header-preface-right {
-      float: right;
-      overflow: hidden;
-      *zoom: 1; }
-      /* line 61, ../../../sass/layouts/baseline/baseline.layout.scss */
-      .l-region-header-preface-right-wrapper .l-region--header-preface-right .panel-pane {
-        float: left; }
 
-  /* line 64, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 59, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-branding {
     width: 31.91489%;
     float: left;
     margin-right: 2.12766%; }
 
-  /* line 67, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .l-region--header-wrapper {
+  /* line 62, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .l-region--header {
     width: 65.95745%;
     float: right;
     margin-right: 0; }
-    /* line 69, ../../../sass/layouts/baseline/baseline.layout.scss */
-    .l-region--header-wrapper .l-region--header {
-      float: right;
-      overflow: hidden;
-      *zoom: 1; }
-      /* line 72, ../../../sass/layouts/baseline/baseline.layout.scss */
-      .l-region--header-wrapper .l-region--header .panel-pane {
-        float: left; }
+    /* line 64, ../../../sass/layouts/baseline/baseline.layout.scss */
+    .l-region--header .l-region--header {
+      float: right; }
 
-  /* line 75, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 69, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-region--navigation {
-    margin-top: 1.618em; }
+    margin-top: 1em; }
 
-  /* line 82, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 76, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-sidebar-first .l-content,
   .has-sidebar-second .l-content,
   .has-two-sidebars .l-content {
     width: 65.95745%;
     float: left;
     margin-right: 2.12766%; }
-  /* line 85, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 79, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-sidebar-first .l-region--sidebar-first,
   .has-sidebar-first .l-region--sidebar-second,
   .has-sidebar-second .l-region--sidebar-first,
@@ -105,26 +92,25 @@
     width: 31.91489%;
     float: right;
     margin-right: 0; }
-  /* line 89, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 83, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-sidebar-first .l-region--sidebar-second,
   .has-sidebar-second .l-region--sidebar-second,
   .has-two-sidebars .l-region--sidebar-second {
     clear: right; }
 
-  /* line 93, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 87, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-region--footer-left {
     width: 31.91489%;
     float: left;
     margin-right: 2.12766%; }
 
-  /* line 96, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 90, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-region--footer-right {
     width: 65.95745%;
     float: right;
-    margin-right: 0;
-    padding-left: 8.51064%; } }
+    margin-right: 0; } }
 @media (min-width: 980px) {
-  /* line 104, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 97, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-container,
   .l-region--navigation {
     max-width: 80%;
@@ -137,86 +123,86 @@
       display: block;
       clear: both; }
 
-  /* line 109, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 102, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-region--header-preface-left {
     width: 49.20635%;
     float: left;
     margin-right: 1.5873%; }
 
-  /* line 112, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 105, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-region-header-preface-right-wrapper {
     width: 49.20635%;
     float: right;
     margin-right: 0; }
 
-  /* line 115, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 108, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-branding {
-    width: 30.15873%;
+    width: 23.80952%;
     float: left;
     margin-right: 1.5873%; }
 
-  /* line 118, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .l-region--header-wrapper {
-    width: 68.25397%;
+  /* line 111, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .l-region--header {
+    width: 74.60317%;
     float: right;
     margin-right: 0; }
 
-  /* line 123, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 116, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-sidebar-first .l-content {
     width: 74.60317%;
     float: right;
     margin-right: 0; }
-  /* line 126, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 119, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-sidebar-first .l-region--sidebar-first {
     width: 23.80952%;
     float: left;
     margin-right: 1.5873%; }
 
-  /* line 131, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 124, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-sidebar-second .l-content {
     width: 74.60317%;
     float: left;
     margin-right: 1.5873%; }
-  /* line 134, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 127, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-sidebar-second .l-region--sidebar-second {
     width: 23.80952%;
     float: right;
     margin-right: 0;
     clear: none; }
 
-  /* line 141, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 134, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-two-sidebars .l-content {
     width: 49.20635%;
     float: left;
     margin-right: 1.5873%;
     margin-left: 25.39683%; }
-  /* line 145, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 138, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-two-sidebars .l-region--sidebar-first,
   .has-two-sidebars .l-region--sidebar-second {
     width: 23.80952%;
     float: left;
     margin-right: 1.5873%; }
-  /* line 149, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 142, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-two-sidebars .l-region--sidebar-first {
     margin-left: -76.19048%; }
-  /* line 152, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 145, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-two-sidebars .l-region--sidebar-second {
     float: right;
     margin-right: 0;
     clear: none; }
 
-  /* line 157, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 150, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-region--footer-preface {
     padding-left: 6.34921%;
     padding-right: 6.34921%; }
 
-  /* line 161, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 154, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-region--footer-left {
     width: 36.50794%;
     float: left;
     margin-right: 1.5873%; }
 
-  /* line 164, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 157, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-region--footer-right {
     width: 61.90476%;
     float: right;
