--- a/css/si_aaa.styles.css
+++ b/css/si_aaa.styles.css
@@ -2338,7 +2338,7 @@
   content: ""; }
 
 /* line 1, ../sass/abstractions/_accessibility.scss */
-.sr-only {
+.l-header .l-region--header .menu > li.fa-search > a, .sr-only {
   position: absolute;
   left: -10000px;
   top: auto;
@@ -2347,18 +2347,18 @@
   overflow: hidden; }
 
 /* line 2, ../sass/abstractions/_lists.scss */
-.l-footer-wrapper .l-container .l-region--footer-left .links-social-media, .l-header ul, .icon-list ul {
+.l-region--footer-left .links-social-media, .l-header .menu, .icon-list ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
   overflow: hidden; }
   /* line 7, ../sass/abstractions/_lists.scss */
-  .l-footer-wrapper .l-container .l-region--footer-left .links-social-media > li, .l-header ul > li, .icon-list ul > li {
+  .l-region--footer-left .links-social-media > li, .l-header .menu > li, .icon-list ul > li {
     display: block;
     list-style-type: none;
     float: left; }
     /* line 11, ../sass/abstractions/_lists.scss */
-    .l-footer-wrapper .l-container .l-region--footer-left .links-social-media > li:last-child, .l-header ul > li:last-child, .icon-list ul > li:last-child {
+    .l-region--footer-left .links-social-media > li:last-child, .l-header .menu > li:last-child, .icon-list ul > li:last-child {
       margin-right: 0px; }
 
 /* line 1, ../sass/base/_media.scss */
@@ -2473,11 +2473,11 @@ a {
   a:active {
     color: #f5865f; }
 
-/* line 134, ../sass/base/_typography.scss */
+/* line 133, ../sass/base/_typography.scss */
 a:hover {
   text-decoration: underline; }
 
-/* line 138, ../sass/base/_typography.scss */
+/* line 137, ../sass/base/_typography.scss */
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0em;
   padding-top: 0em;
@@ -2485,7 +2485,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0.32857em;
   font-family: "GT Walsheim", Helvetica, Arial, sans-serif;
   color: #1668b3; }
-  /* line 142, ../sass/base/_typography.scss */
+  /* line 141, ../sass/base/_typography.scss */
   h1 a,
   h1 a:visited, h2 a,
   h2 a:visited, h3 a,
@@ -2495,31 +2495,31 @@ h1, h2, h3, h4, h5, h6 {
   h6 a:visited {
     color: inherit;
     text-decoration: none; }
-  /* line 147, ../sass/base/_typography.scss */
+  /* line 146, ../sass/base/_typography.scss */
   h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
     color: #12395c; }
 
-/* line 152, ../sass/base/_typography.scss */
+/* line 151, ../sass/base/_typography.scss */
 h1 {
   font-size: 37px;
   font-size: 2.64286rem; }
 
-/* line 156, ../sass/base/_typography.scss */
+/* line 155, ../sass/base/_typography.scss */
 h2 {
   font-size: 26px;
   font-size: 1.85714rem; }
 
-/* line 160, ../sass/base/_typography.scss */
+/* line 159, ../sass/base/_typography.scss */
 h3 {
   font-size: 18px;
   font-size: 1.28571rem; }
 
-/* line 164, ../sass/base/_typography.scss */
+/* line 163, ../sass/base/_typography.scss */
 h4 {
   font-size: 16px;
   font-size: 1.14286rem; }
 
-/* line 168, ../sass/base/_typography.scss */
+/* line 167, ../sass/base/_typography.scss */
 p {
   margin: 0;
   margin-top: 0em;
@@ -2527,76 +2527,49 @@ p {
   padding-bottom: 0em;
   margin-bottom: 1.64286em; }
 
-/* line 1, ../sass/components/_footer.scss */
+/* line 2, ../sass/components/_footer-preface.scss */
 .l-footer-preface {
   background: url("../images/mission-bg.jpg") center top no-repeat #efefef;
   background-size: cover;
   padding: 2em 0;
   text-align: center;
   color: #2c2c2c; }
-  /* line 7, ../sass/components/_footer.scss */
+  /* line 8, ../sass/components/_footer-preface.scss */
   .l-footer-preface h2 {
     color: #2c2c2c; }
-  /* line 10, ../sass/components/_footer.scss */
+  /* line 11, ../sass/components/_footer-preface.scss */
   .l-footer-preface p {
-    font-size: 18px;
-    font-size: 1.28571rem;
-    line-height: 1.618em; }
-    /* line 13, ../sass/components/_footer.scss */
+    font-size: 1.28571em;
+    line-height: 1.27778em; }
+    /* line 13, ../sass/components/_footer-preface.scss */
     .l-footer-preface p:last-child {
       margin-bottom: 0; }
 
-/* line 18, ../sass/components/_footer.scss */
-.l-footer-wrapper .l-container {
-  background: url("../images/AAA-logo-grey.png") left top no-repeat;
-  padding-top: 3.618em; }
-  /* line 21, ../sass/components/_footer.scss */
-  .l-footer-wrapper .l-container .panel-pane {
-    margin-bottom: 1.618em; }
-  /* line 27, ../sass/components/_footer.scss */
-  .l-footer-wrapper .l-container .l-region--footer-left .links-social-media > li {
-    padding: 1.1em 0; }
-  /* line 37, ../sass/components/_footer.scss */
-  .l-footer-wrapper .l-container .l-region--footer-right .menu {
-    list-style: none;
-    margin: 0;
-    padding: 0; }
-    /* line 41, ../sass/components/_footer.scss */
-    .l-footer-wrapper .l-container .l-region--footer-right .menu .leaf, .l-footer-wrapper .l-container .l-region--footer-right .menu .collapsed {
-      list-style-image: none;
-      list-style-type: none; }
-  /* line 46, ../sass/components/_footer.scss */
-  .l-footer-wrapper .l-container .l-region--footer-right .pane-system-main-menu .list-0 {
-    margin-left: 0; }
-  @media (min-width: 980px) {
-    /* line 48, ../sass/components/_footer.scss */
-    .l-footer-wrapper .l-container .l-region--footer-right .pane-menu-menu-quick-links-menu,
-    .l-footer-wrapper .l-container .l-region--footer-right .pane-system-main-menu {
-      float: left; }
-    /* line 52, ../sass/components/_footer.scss */
-    .l-footer-wrapper .l-container .l-region--footer-right .pane-system-main-menu {
-      padding-left: 2em; } }
+/* line 4, ../sass/components/_footer.scss */
+.l-region--footer-left .links-social-media > li {
+  margin-right: 2.427em;
+  padding: 1.1em 0; }
 
 /* line 1, ../sass/components/_header.scss */
 .l-header {
   background-color: #1668b3; }
   /* line 6, ../sass/components/_header.scss */
-  .l-header ul > li {
+  .l-header .menu > li {
     color: #fff; }
     /* line 8, ../sass/components/_header.scss */
-    .l-header ul > li > a {
+    .l-header .menu > li > a {
       color: #fff; }
       /* line 18, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
-      .l-header ul > li > a:visited {
+      .l-header .menu > li > a:visited {
         color: #fff; }
       /* line 21, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
-      .l-header ul > li > a:focus {
+      .l-header .menu > li > a:focus {
         color: #fff; }
       /* line 24, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
-      .l-header ul > li > a:hover {
+      .l-header .menu > li > a:hover {
         color: #91bce3; }
       /* line 27, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
-      .l-header ul > li > a:active {
+      .l-header .menu > li > a:active {
         color: #fff; }
   /* line 15, ../sass/components/_header.scss */
   .l-header p {
@@ -2606,48 +2579,65 @@ p {
   /* line 20, ../sass/components/_header.scss */
   .l-header .l-header-preface-wrapper {
     background-color: #12395c;
-    margin-bottom: 1.618em; }
+    margin-bottom: 1.13em; }
     /* line 24, ../sass/components/_header.scss */
     .l-header .l-header-preface-wrapper .l-region--header-preface-left img {
       max-height: 1.6em;
       width: auto; }
-    /* line 31, ../sass/components/_header.scss */
-    .l-header .l-header-preface-wrapper .l-region--header-preface-right .icon-list {
-      margin-right: 2em; }
-      /* line 32, ../sass/components/_header.scss */
-      .l-header .l-header-preface-wrapper .l-region--header-preface-right .icon-list .icon-only {
-        color: #fff; }
-        /* line 24, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
-        .l-header .l-header-preface-wrapper .l-region--header-preface-right .icon-list .icon-only:hover {
-          color: #91bce3; }
-    /* line 37, ../sass/components/_header.scss */
-    .l-header .l-header-preface-wrapper .l-region--header-preface-right .btn {
-      background-color: #134979;
-      border: 1px solid #f2f2f2; }
-    /* line 41, ../sass/components/_header.scss */
-    .l-header .l-header-preface-wrapper .l-region--header-preface-right .block--donate-link {
+    /* line 30, ../sass/components/_header.scss */
+    .l-header .l-header-preface-wrapper .l-region--header-preface-right {
+      float: right; }
+      /* line 13, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/toolkit-2.9.0/stylesheets/toolkit/_clearfix.scss */
+      .l-header .l-header-preface-wrapper .l-region--header-preface-right:after {
+        content: "";
+        display: table;
+        clear: both; }
+      /* line 33, ../sass/components/_header.scss */
+      .l-header .l-header-preface-wrapper .l-region--header-preface-right .pane-social-media-links {
+        float: left; }
+        /* line 36, ../sass/components/_header.scss */
+        .l-header .l-header-preface-wrapper .l-region--header-preface-right .pane-social-media-links .links-social-media > a {
+          color: white; }
+          /* line 24, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
+          .l-header .l-header-preface-wrapper .l-region--header-preface-right .pane-social-media-links .links-social-media > a:hover {
+            color: #91bce3; }
+      /* line 42, ../sass/components/_header.scss */
+      .l-header .l-header-preface-wrapper .l-region--header-preface-right .btn {
+        background-color: #134979;
+        border: 1px solid #f2f2f2; }
+      /* line 46, ../sass/components/_header.scss */
+      .l-header .l-header-preface-wrapper .l-region--header-preface-right .block--donate-link {
+        float: left; }
+  /* line 53, ../sass/components/_header.scss */
+  .l-header .l-region--header {
+    padding-top: .5em; }
+    /* line 55, ../sass/components/_header.scss */
+    .l-header .l-region--header .menu {
+      float: right; }
+      /* line 58, ../sass/components/_header.scss */
+      .l-header .l-region--header .menu > li > a {
+        font-weight: 600;
+        color: #91bce3;
+        padding: 0 .75em;
+        border-left: 1px solid #91bce3; }
+        @media (min-width: 980px) {
+          /* line 58, ../sass/components/_header.scss */
+          .l-header .l-region--header .menu > li > a {
+            padding: 0 1em; } }
+      /* line 67, ../sass/components/_header.scss */
+      .l-header .l-region--header .menu > li:first-child > a {
+        border-left: none; }
+      /* line 70, ../sass/components/_header.scss */
+      .l-header .l-region--header .menu > li.fa-search {
+        color: #91bce3;
+        padding-top: 3px; }
+    /* line 79, ../sass/components/_header.scss */
+    .l-header .l-region--header .icon-list {
       float: left; }
-  /* line 50, ../sass/components/_header.scss */
-  .l-header .l-region--header ul > li > a {
-    font-weight: 600;
-    color: #91bce3;
-    padding: 0 0.75em;
-    border-left: 1px solid #91bce3; }
-    @media (min-width: 980px) {
-      /* line 50, ../sass/components/_header.scss */
-      .l-header .l-region--header ul > li > a {
-        padding: 0.4854em 1em 0; } }
-  /* line 59, ../sass/components/_header.scss */
-  .l-header .l-region--header ul > li:first-child > a {
-    border-left: none; }
-  /* line 63, ../sass/components/_header.scss */
-  .l-header .l-region--header .icon-list ul > li {
-    padding: 0; }
-    /* line 65, ../sass/components/_header.scss */
-    .l-header .l-region--header .icon-list ul > li > a {
-      border-left: none;
-      padding: 0; }
-  /* line 72, ../sass/components/_header.scss */
+      /* line 81, ../sass/components/_header.scss */
+      .l-header .l-region--header .icon-list a {
+        color: white; }
+  /* line 85, ../sass/components/_header.scss */
   .l-header .l-branding img {
     width: 100%;
     max-width: 400px; }
@@ -2655,7 +2645,7 @@ p {
 /* line 5, ../sass/components/_misc.scss */
 .btn {
   display: inline-block;
-  padding: 0.4045em 1em;
+  padding: 0.4em 1.2em;
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: .8px;
@@ -2663,28 +2653,16 @@ p {
   font-size: 0.78571rem;
   background-color: #1668b3;
   color: #fff; }
-  /* line 14, ../sass/components/_misc.scss */
-  .btn a {
-    color: white; }
-    /* line 24, ../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
-    .btn a:hover {
-      color: #91bce3; }
 
-/* line 19, ../sass/components/_misc.scss */
+/* line 16, ../sass/components/_misc.scss */
 .icon-only {
   display: inline-block;
   /* Fix for clickability issue in WebKit */ }
 
-/* line 26, ../sass/components/_misc.scss */
+/* line 23, ../sass/components/_misc.scss */
 .icon-list ul > li {
-  margin-right: 2em;
-  padding: 1.1326em 0; }
-
-/* line 34, ../sass/components/_misc.scss */
-.split-list ul .sub-list {
-  float: left;
-  margin-left: 2em;
-  padding: 0; }
+  margin-right: 2.427em;
+  padding: 1.1em 0; }
 
 /* line 2, ../sass/components/_tb_megamenu.scss */
 .tb-megamenu, .tb-megamenu .nav-collapse {
@@ -2749,22 +2727,24 @@ p {
     letter-spacing: none; }
 /* line 89, ../sass/components/_tb_megamenu.scss */
 .l-region--navigation .tb-megamenu .nav-collapse {
-  background-color: #ededed;
+  background-color: #ededed; }
+/* line 92, ../sass/components/_tb_megamenu.scss */
+.l-region--navigation .tb-megamenu .nav-collapse {
   -moz-box-shadow: rgba(0, 0, 0, 0.25) 1px 5px 5px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.25) 1px 5px 5px;
   box-shadow: rgba(0, 0, 0, 0.25) 1px 5px 5px; }
   @media (min-width: 980px) {
-    /* line 89, ../sass/components/_tb_megamenu.scss */
+    /* line 92, ../sass/components/_tb_megamenu.scss */
     .l-region--navigation .tb-megamenu .nav-collapse {
-      background: none;
+      background-color: none;
       box-shadow: none; }
-      /* line 95, ../sass/components/_tb_megamenu.scss */
+      /* line 97, ../sass/components/_tb_megamenu.scss */
       .l-region--navigation .tb-megamenu .nav-collapse .dropdown-menu {
         background-color: #ededed;
         -moz-box-shadow: rgba(0, 0, 0, 0.25) 1px 5px 5px;
         -webkit-box-shadow: rgba(0, 0, 0, 0.25) 1px 5px 5px;
         box-shadow: rgba(0, 0, 0, 0.25) 1px 5px 5px; } }
-/* line 101, ../sass/components/_tb_megamenu.scss */
+/* line 103, ../sass/components/_tb_megamenu.scss */
 .l-region--navigation .tb-megamenu .btn-navbar {
   color: #515151;
   background-color: #f0f0f0;
@@ -2774,7 +2754,7 @@ p {
   background-image: -moz-linear-gradient(#ffffff, #ededed);
   background-image: -webkit-linear-gradient(#ffffff, #ededed);
   background-image: linear-gradient(#ffffff, #ededed); }
-  /* line 105, ../sass/components/_tb_megamenu.scss */
+  /* line 107, ../sass/components/_tb_megamenu.scss */
   .l-region--navigation .tb-megamenu .btn-navbar:hover {
     color: #2c2c2c; }
 
