--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,7 +1,7 @@
 .l-header {
   background-color: $blue;
 
-  ul {
+  .menu {
     @extend %navigation-list;
     > li {
       color: #fff;
@@ -19,7 +19,7 @@
   }
   .l-header-preface-wrapper {
     background-color: $dark-blue;
-    margin-bottom: $vert-spacing-unit;
+    margin-bottom: 1.13em;
     .l-region--header-preface-left {
       img {
         max-height: 1.6em;
@@ -28,12 +28,17 @@
     }
 
     .l-region--header-preface-right {
-      .icon-list {
-        .icon-only {
-          @include link-colors(#fff, $light-blue);
+      float: right;
+      @include clearfix;
+      .pane-social-media-links {
+        float: left;
+        .links-social-media {
+         > a {
+            @include link-colors(white, $light-blue);
+          }
         }
-        margin-right: $horz-spacing-unit * 2;
       }
+
       .btn {
         background-color: #134979;
         border: 1px solid #f2f2f2;
@@ -46,26 +51,34 @@
   } // end l-region-header-preface
 
   .l-region--header {
-    ul > li {
-      > a {
-        font-weight: 600;
-        @include link-colors($light-blue);
-        padding: 0 $horz-spacing-unit*.75;
-        @include breakpoint($desk) {
-          padding: $vert-spacing-unit*.3 $horz-spacing-unit 0;
+    padding-top: .5em;
+    .menu {
+      float: right;
+      > li {
+        > a {
+          font-weight: 600;
+          @include link-colors($light-blue);
+          padding: 0 .75em;
+          @include breakpoint($desk) {
+            padding: 0 1em;
+          }
+          border-left: 1px solid $light-blue;
         }
-        border-left: 1px solid $light-blue;
-      }
-      &:first-child > a {
-        border-left: none;
+        &:first-child > a {
+          border-left: none;
+        }
+        &.fa-search {
+          color: $light-blue;
+          padding-top: 3px;
+          > a {
+            @extend %screen-reader;
+          }
+        }
       }
     }
-    .icon-list ul > li {
-      padding:0;
-      > a {
-        border-left: none;
-        padding: 0;
-      }
+    .icon-list {
+      float: left;
+      a {color: white}
     }
   } // end l-region--header
 
@@ -73,5 +86,5 @@
     width: 100%;
     max-width: 400px;
   } // end l-branding
-} // end l-region--header
+} // end l-header
 
