--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -111,9 +111,7 @@
   ),
   600,
   italic);
-
 @include establish-baseline($base-font-size);
-
 
 /**
  * $BASE-TYPOGRAPHY
@@ -127,7 +125,7 @@ html {
  * $LINKS
  */
 a {
-  @include link-colors($blue, $dark-blue, $salmon, $blue, $dark-blue);
+  @include link-colors($mid-blue, $dark-blue, $salmon, $mid-blue, $dark-blue);
   text-decoration: none;
 }
 a:hover {
@@ -137,7 +135,7 @@ a:hover {
 #{headings()} {
   @include rhythm(0, 0, 0, 0.2);
   font-family: $gt-walsheim;
-  color: $blue;
+  color: $mid-blue;
   a,
   a:visited {
     color: inherit;
@@ -153,7 +151,7 @@ h1 {
 }
 
 h2 {
-  @include font-size(26px);
+  @include font-size(23px);
 }
 
 h3 {
