--- a/sass/layouts/baseline/baseline.layout.scss
+++ b/sass/layouts/baseline/baseline.layout.scss
@@ -4,7 +4,7 @@
  * Styling of the "laseline" layout demonstrating the Compass grid extension Susy
  * and building mobile first layouts.
  ******************************************************************************/
-@import "toolkit"; // use border-box box model instead of default
+@import "toolkit";
 @import "compass";
 @import "susy";
 @import "breakpoint";
@@ -15,7 +15,7 @@
 
 // Susy Defaults (http://susy.readthedocs.org/en/latest/settings/)
 $susy: (
-  columns:            4,
+  columns:            12,
   container:          90%,
   gutters:            $gutter,
  // debug:              (image:show),
@@ -25,17 +25,9 @@ $susy: (
 .l-region--navigation {
   @include container; // Define these elements as the grid containers.
   margin-bottom: $vert-spacing-unit;
+}
+.l-container {
   @include clearfix;
-}
-
-.l-main {
-  padding: $vert-spacing-unit*2 0;
-}
-.l-region--header-preface-left  {
-  @include span(1);
-}
-.l-region-header-preface-right-wrapper {
-  @include span(3 last);
 }
 
 .l-region--highlighted,
@@ -46,10 +38,6 @@ $susy: (
 }
 
 @include breakpoint($tab) {
-  .l-container,
-  .l-region--navigation{
-    @include layout(12); // Make 16 column design.
-  }
   .l-region--header-preface-left  {
     @include span(6);
   }
@@ -84,13 +72,6 @@ $susy: (
       clear: right;
     }
   }
-  .l-region--footer-left {
-    @include span(4);
-  }
-  .l-region--footer-right {
-    @include span(8 last);
-  }
-
 }
 
 @include breakpoint($desk) {
@@ -146,16 +127,5 @@ $susy: (
       @include last; // This element spans the last (omega) column.
       clear: none;
     }
-  }
-  .l-region--footer-preface {
-    @include prefix(1);
-    @include suffix(1);
-  }
-  .l-region--footer-left {
-    @include span(6);
-  }
-  .l-region--footer-right {
-    @include span(10 last);
-    @include prefix(1);
   }
 }
