--- a/sass/variables/_colors.scss
+++ b/sass/variables/_colors.scss
@@ -1,6 +1,6 @@
 $pale-blue      : #92cfe8;
 $light-blue     : #91bce3;
-$blue       : #1668b3;
+$mid-blue       : #1668b3;
 $dark-blue      : #12395c;
 
 $orange         : #e4621c;
@@ -15,9 +15,8 @@ $red            : #eb3717;
 
 $purple         : #a32a57;
 
-$lighter-grey   : #ededed;
 $light-grey     : #efefef;
 $mid-grey       : #c9c9c9;
-$grey           : #9c9b9b;
-$dark-grey      : #515151;
+$dark-mid-grey  : #9c9b9b;
+$dark-grey      : #595959;
 $darker-grey    : #2c2c2c;
