--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,5 @@
 .l-header {
-  background-color: $blue;
+  background-color: $mid-blue;
 
   .menu {
     @extend %navigation-list;
@@ -14,7 +14,7 @@
 
   p {
     margin: 0;
-    padding: 1em 0;
+    padding: .75em 0;
     line-height: 1em;
   }
   .l-header-preface-wrapper {
@@ -22,7 +22,7 @@
     margin-bottom: 1.13em;
     .l-region--header-preface-left {
       img {
-        max-height: 1.6em;
+        height: 1.5em;
         width: auto;
       }
     }
@@ -30,18 +30,21 @@
     .l-region--header-preface-right {
       float: right;
       @include clearfix;
-      .pane-social-media-links {
+      nav {
         float: left;
-        .links-social-media {
-         > a {
-            @include link-colors(white, $light-blue);
+        .menu {
+          > li {
+            margin-right: $horz-spacing-unit;
+            padding: 1.1em 0;
+           > a {
+              @extend %screen-reader;
+            }
           }
         }
       }
 
       .btn {
         background-color: #134979;
-        border: 1px solid #f2f2f2;
       }
       .block--donate-link {
         float: left;
@@ -51,34 +54,20 @@
   } // end l-region-header-preface
 
   .l-region--header {
-    padding-top: .5em;
+    padding-top: 1em;
     .menu {
       float: right;
       > li {
         > a {
-          font-weight: 600;
-          @include link-colors($light-blue);
-          padding: 0 .75em;
-          @include breakpoint($desk) {
-            padding: 0 1em;
-          }
+          @include link-colors($light-blue, #fff, $light-blue, $light-blue, $light-blue);
+          @include font-size(12px);
+          padding: 0 1em;
           border-left: 1px solid $light-blue;
         }
         &:first-child > a {
           border-left: none;
         }
-        &.fa-search {
-          color: $light-blue;
-          padding-top: 3px;
-          > a {
-            @extend %screen-reader;
-          }
-        }
       }
-    }
-    .icon-list {
-      float: left;
-      a {color: white}
     }
   } // end l-region--header
 
