--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -125,7 +125,7 @@ html {
  * $LINKS
  */
 a {
-  @include link-colors($mid-blue, $dark-blue, $salmon, $mid-blue, $dark-blue);
+  @include link-colors($blue, $dark-blue, $salmon, $blue, $dark-blue);
   text-decoration: none;
 }
 a:hover {
@@ -135,7 +135,7 @@ a:hover {
 #{headings()} {
   @include rhythm(0, 0, 0, 0.2);
   font-family: $gt-walsheim;
-  color: $mid-blue;
+  color: $blue;
   a,
   a:visited {
     color: inherit;
@@ -159,7 +159,7 @@ h3 {
 }
 
 h4 {
-  @include font-size(16px);
+  @include font-size(14px);
 }
 
 p {
