--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,5 @@
 .l-header {
-  background-color: $mid-blue;
+  background-color: $blue;
 
   .menu {
     @extend %navigation-list;
@@ -14,61 +14,59 @@
 
   p {
     margin: 0;
-    padding: .75em 0;
-    line-height: 1em;
+    padding: $vert-spacing-unit*.5 0;
   }
   .l-header-preface-wrapper {
     background-color: $dark-blue;
-    margin-bottom: 1.13em;
     .l-region--header-preface-left {
       img {
-        height: 1.5em;
+        max-height: $vert-spacing-unit;
         width: auto;
       }
     }
 
     .l-region--header-preface-right {
-      float: right;
-      @include clearfix;
-      nav {
-        float: left;
-        .menu {
-          > li {
-            margin-right: $horz-spacing-unit;
-            padding: 1.1em 0;
-           > a {
-              @extend %screen-reader;
-            }
-          }
+      .pane-social-media-links {
+        .icon-only {
+           @include link-colors(#fff, $light-blue);
         }
+        margin-right: $horz-spacing-unit * 2;
       }
-
       .btn {
         background-color: #134979;
+        border: 1px solid #f2f2f2;
       }
-      .block--donate-link {
-        float: left;
-      }
+
     } // end l-region--header-preface-right
 
   } // end l-region-header-preface
 
   .l-region--header {
-    padding-top: 1em;
+    padding-top: $vert-spacing-unit*.6;
     .menu {
-      float: right;
       > li {
         > a {
-          @include link-colors($light-blue, #fff, $light-blue, $light-blue, $light-blue);
-          @include font-size(12px);
+          @include link-colors($light-blue, #fff);
           padding: 0 1em;
           border-left: 1px solid $light-blue;
+          &:hover {
+            border-color: #fff;
+          }
         }
         &:first-child > a {
           border-left: none;
         }
       }
     }
+    .icon-list {
+      p {
+        padding: 0;
+        > a {
+          @include link-colors($light-blue, #fff);
+        }
+      }
+    }
+
   } // end l-region--header
 
 .l-branding img {
@@ -76,4 +74,5 @@
     max-width: 400px;
   } // end l-branding
 } // end l-header
+
 
