--- a/css/layouts/baseline/baseline.layout.css
+++ b/css/layouts/baseline/baseline.layout.css
@@ -7,10 +7,9 @@
 /* line 24, ../../../sass/layouts/baseline/baseline.layout.scss */
 .l-container,
 .l-region--navigation {
-  max-width: 90%;
+  max-width: 96%;
   margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 1em; }
+  margin-right: auto; }
   /* line 12, ../../../../../../../../../../../.rvm/gems/ruby-2.2.0@omega.si_aaa/gems/susy-2.2.2/sass/susy/output/support/_clearfix.scss */
   .l-container:after,
   .l-region--navigation:after {
@@ -23,53 +22,72 @@
   overflow: hidden;
   *zoom: 1; }
 
-/* line 33, ../../../sass/layouts/baseline/baseline.layout.scss */
+/* line 32, ../../../sass/layouts/baseline/baseline.layout.scss */
+.l-header-preface-wrapper,
+.l-header-middle,
+header,
+.l-main,
+.l-hero,
+.l-highlighted,
+.l-main,
+.l-footer-preface,
 .l-region--highlighted,
 .l-region--help,
 .l-region--sidebar-first,
 .l-region--sidebar-second {
-  margin-bottom: 1em; }
+  margin-bottom: 1.618em; }
+
+/* line 49, ../../../sass/layouts/baseline/baseline.layout.scss */
+.l-region--header-wrapper .l-region--header .panel-pane {
+  float: left; }
+
+/* line 56, ../../../sass/layouts/baseline/baseline.layout.scss */
+.l-region--header-preface-right .panel-pane {
+  float: left; }
 
 @media (min-width: 600px) {
-  /* line 41, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 62, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-region--header-preface-left {
     width: 48.93617%;
     float: left;
     margin-right: 2.12766%; }
 
-  /* line 44, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 65, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-region-header-preface-right-wrapper {
     width: 48.93617%;
     float: right;
     margin-right: 0; }
+    /* line 67, ../../../sass/layouts/baseline/baseline.layout.scss */
+    .l-region-header-preface-right-wrapper .l-region--header-preface-right {
+      float: right; }
 
-  /* line 47, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 71, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-branding {
     width: 31.91489%;
     float: left;
     margin-right: 2.12766%; }
 
-  /* line 50, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .l-region--header {
+  /* line 74, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .l-region--header-wrapper {
     width: 65.95745%;
     float: right;
     margin-right: 0; }
-    /* line 52, ../../../sass/layouts/baseline/baseline.layout.scss */
-    .l-region--header .l-region--header {
+    /* line 76, ../../../sass/layouts/baseline/baseline.layout.scss */
+    .l-region--header-wrapper .l-region--header {
       float: right; }
 
-  /* line 57, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 81, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-region--navigation {
-    margin-top: 1em; }
+    margin-top: 1.618em; }
 
-  /* line 64, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 88, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-sidebar-first .l-content,
   .has-sidebar-second .l-content,
   .has-two-sidebars .l-content {
     width: 65.95745%;
     float: left;
     margin-right: 2.12766%; }
-  /* line 67, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 91, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-sidebar-first .l-region--sidebar-first,
   .has-sidebar-first .l-region--sidebar-second,
   .has-sidebar-second .l-region--sidebar-first,
@@ -79,13 +97,107 @@
     width: 31.91489%;
     float: right;
     margin-right: 0; }
-  /* line 71, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 95, ../../../sass/layouts/baseline/baseline.layout.scss */
   .has-sidebar-first .l-region--sidebar-second,
   .has-sidebar-second .l-region--sidebar-second,
   .has-two-sidebars .l-region--sidebar-second {
-    clear: right; } }
+    clear: right; }
+
+  /* line 99, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .l-region--footer-left {
+    width: 31.91489%;
+    float: left;
+    margin-right: 2.12766%; }
+
+  /* line 102, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .l-region--footer-right {
+    width: 57.44681%;
+    float: right;
+    margin-right: 0;
+    padding-left: 8.51064%; } }
 @media (min-width: 980px) {
-  /* line 78, ../../../sass/layouts/baseline/baseline.layout.scss */
+  /* line 113, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .l-region--header-preface-left {
+    width: 49.20635%;
+    float: left;
+    margin-right: 1.5873%; }
+
+  /* line 116, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .l-region-header-preface-right-wrapper {
+    width: 49.20635%;
+    float: right;
+    margin-right: 0; }
+
+  /* line 119, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .l-branding {
+    width: 23.80952%;
+    float: left;
+    margin-right: 1.5873%; }
+
+  /* line 122, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .l-region--header-wrapper {
+    width: 74.60317%;
+    float: right;
+    margin-right: 0; }
+
+  /* line 127, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .has-sidebar-first .l-content {
+    width: 74.60317%;
+    float: right;
+    margin-right: 0; }
+  /* line 130, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .has-sidebar-first .l-region--sidebar-first {
+    width: 23.80952%;
+    float: left;
+    margin-right: 1.5873%; }
+
+  /* line 135, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .has-sidebar-second .l-content {
+    width: 74.60317%;
+    float: left;
+    margin-right: 1.5873%; }
+  /* line 138, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .has-sidebar-second .l-region--sidebar-second {
+    width: 23.80952%;
+    float: right;
+    margin-right: 0;
+    clear: none; }
+
+  /* line 145, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .has-two-sidebars .l-content {
+    width: 49.20635%;
+    float: left;
+    margin-right: 1.5873%;
+    margin-left: 25.39683%; }
+  /* line 149, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .has-two-sidebars .l-region--sidebar-first,
+  .has-two-sidebars .l-region--sidebar-second {
+    width: 23.80952%;
+    float: left;
+    margin-right: 1.5873%; }
+  /* line 153, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .has-two-sidebars .l-region--sidebar-first {
+    margin-left: -76.19048%; }
+  /* line 156, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .has-two-sidebars .l-region--sidebar-second {
+    float: right;
+    margin-right: 0;
+    clear: none; }
+
+  /* line 161, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .l-region--footer-left {
+    width: 36.50794%;
+    float: left;
+    margin-right: 1.5873%; }
+
+  /* line 164, ../../../sass/layouts/baseline/baseline.layout.scss */
+  .l-region--footer-right {
+    width: 55.55556%;
+    float: right;
+    margin-right: 0;
+    padding-left: 6.34921%; } }
+@media (min-width: 1280px) {
+  /* line 172, ../../../sass/layouts/baseline/baseline.layout.scss */
   .l-container,
   .l-region--navigation {
     max-width: 80%;
@@ -96,74 +208,6 @@
     .l-region--navigation:after {
       content: " ";
       display: block;
-      clear: both; }
-
-  /* line 83, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .l-region--header-preface-left {
-    width: 49.20635%;
-    float: left;
-    margin-right: 1.5873%; }
-
-  /* line 86, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .l-region-header-preface-right-wrapper {
-    width: 49.20635%;
-    float: right;
-    margin-right: 0; }
-
-  /* line 89, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .l-branding {
-    width: 23.80952%;
-    float: left;
-    margin-right: 1.5873%; }
-
-  /* line 92, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .l-region--header {
-    width: 74.60317%;
-    float: right;
-    margin-right: 0; }
-
-  /* line 97, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .has-sidebar-first .l-content {
-    width: 74.60317%;
-    float: right;
-    margin-right: 0; }
-  /* line 100, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .has-sidebar-first .l-region--sidebar-first {
-    width: 23.80952%;
-    float: left;
-    margin-right: 1.5873%; }
-
-  /* line 105, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .has-sidebar-second .l-content {
-    width: 74.60317%;
-    float: left;
-    margin-right: 1.5873%; }
-  /* line 108, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .has-sidebar-second .l-region--sidebar-second {
-    width: 23.80952%;
-    float: right;
-    margin-right: 0;
-    clear: none; }
-
-  /* line 115, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .has-two-sidebars .l-content {
-    width: 49.20635%;
-    float: left;
-    margin-right: 1.5873%;
-    margin-left: 25.39683%; }
-  /* line 119, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .has-two-sidebars .l-region--sidebar-first,
-  .has-two-sidebars .l-region--sidebar-second {
-    width: 23.80952%;
-    float: left;
-    margin-right: 1.5873%; }
-  /* line 123, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .has-two-sidebars .l-region--sidebar-first {
-    margin-left: -76.19048%; }
-  /* line 126, ../../../sass/layouts/baseline/baseline.layout.scss */
-  .has-two-sidebars .l-region--sidebar-second {
-    float: right;
-    margin-right: 0;
-    clear: none; } }
+      clear: both; } }
 
 /*# sourceMappingURL=baseline.layout.css.map */
