--- a/sass/components/_misc.scss
+++ b/sass/components/_misc.scss
@@ -4,11 +4,40 @@
 
 .btn {
   display: inline-block;
-  padding: 0.4em 1.2em;
+  padding: $vert-spacing-unit*.25 $horz-spacing-unit;
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: .8px;
   @include font-size(11px);
-  background-color: $mid-blue;
+  background-color: $blue;
   color: #fff;
+  a {
+    @include link-colors(white, $light-blue);
+  }
+}
+
+.icon-only {
+  display: inline-block; /* Fix for clickability issue in WebKit */
+}
+
+.icon-list {
+  ul {
+    @extend %navigation-list;
+    > li {
+      margin-right: $horz-spacing-unit *  2;
+      padding: $vert-spacing-unit*.7 0;
+    }
+  }
+}
+
+.split-list ul {
+  .sub-list {
+    padding: 0;
+    margin-left: 0;
+
+    @include breakpoint($desk) {
+      margin-left: $horz-spacing-unit *  2;
+      float: left;
+    }
+  }
 }
