--- a/sass/layouts/baseline/baseline.layout.scss
+++ b/sass/layouts/baseline/baseline.layout.scss
@@ -16,7 +16,7 @@
 // Susy Defaults (http://susy.readthedocs.org/en/latest/settings/)
 $susy: (
   columns:            12,
-  container:          90%,
+  container:          96%,
   gutters:            $gutter,
  // debug:              (image:show),
 );
@@ -24,17 +24,38 @@ $susy: (
 .l-container,
 .l-region--navigation {
   @include container; // Define these elements as the grid containers.
-  margin-bottom: $vert-spacing-unit;
 }
+
 .l-container {
   @include clearfix;
 }
-
+.l-header-preface-wrapper,
+.l-header-middle,
+header,
+.l-main,
+.l-hero,
+.l-highlighted,
+.l-main,
+.l-footer-preface,
 .l-region--highlighted,
 .l-region--help,
 .l-region--sidebar-first,
 .l-region--sidebar-second {
   margin-bottom: $vert-spacing-unit;
+}
+
+.l-region--header-wrapper {
+  .l-region--header {
+    .panel-pane {
+      float: left;
+    }
+  }
+}
+
+.l-region--header-preface-right {
+  .panel-pane {
+    float: left;
+  }
 }
 
 @include breakpoint($tab) {
@@ -43,11 +64,14 @@ $susy: (
   }
   .l-region-header-preface-right-wrapper {
     @include span(6 last);
+    .l-region--header-preface-right {
+      float: right;
+    }
   }
   .l-branding {
     @include span(4);
   }
-  .l-region--header {
+  .l-region--header-wrapper {
     @include span(8 last);
     .l-region--header {
       float: right;
@@ -72,12 +96,18 @@ $susy: (
       clear: right;
     }
   }
+  .l-region--footer-left {
+    @include span(4);
+  }
+  .l-region--footer-right {
+    @include span(7 last);
+    @include prefix(1);
+  }
 }
 
 @include breakpoint($desk) {
   .l-container,
   .l-region--navigation{
-    @include container(80%); // Set max-width to 80%
     @include layout(16); // Make 16 column design.
   }
   .l-region--header-preface-left  {
@@ -89,7 +119,7 @@ $susy: (
   .l-branding {
     @include span(4); // Span 6 out of 16 columns.
   }
-  .l-region--header{
+  .l-region--header-wrapper{
     @include span(12 last); // Span the last (omega) 10 columns of 16.
   }
 
@@ -127,5 +157,20 @@ $susy: (
       @include last; // This element spans the last (omega) column.
       clear: none;
     }
+  }
+  .l-region--footer-left {
+    @include span(6);
+  }
+  .l-region--footer-right {
+    @include span(9 last);
+    @include prefix(1);
+  }
+}
+
+
+@include breakpoint($wide) {
+  .l-container,
+  .l-region--navigation{
+    @include container(80%); // Set max-width to 80%
   }
 }
