--- a/sass/variables/_grid.scss
+++ b/sass/variables/_grid.scss
@@ -1,10 +1,10 @@
 // Set consistent vertical and horizontal spacing units.
-$vert-spacing-unit: 1em;
-$horz-spacing-unit: 1.618em;
+$vert-spacing-unit: 1.618em;
+$horz-spacing-unit: 1em;
 
 // Breakpoint settings
 $tab: 600px;
 $desk: 980px;
-
+$wide: 1280px;
 // space between columns
 $gutter     : 1/3;
